# pkg/product/routes.go
@@ -8,16 +8,36 @@ import (
 )
 
 func RegisterRoutes(r *gin.Engine, c *config.Config, authSvc *auth.ServiceClient) {
-	auth := auth.InitAuthMiddleware(authSvc)
+	// auth := auth.InitAuthMiddleware(authSvc)
 	svc := &ServiceClient{
 		Client: InitServiceClient(c),
 	}
 
-	routes := r.Group("/product")
-	routes.Use(auth.AuthRequired)
-	routes.POST("/", svc.CreateProduct)
+	product := r.Group("/product")
+	// product.Use(auth.AuthRequired)
+	product.POST("/", svc.CreateProduct)
+	product.GET("/",svc.GetProduct)
+	product.GET("/all",svc.ListProduct)
+	product.PUT("/",svc.UpdateProduct)
+	product.DELETE("/",svc.DeleteProduct)
+
 }
 
 func (svc *ServiceClient) CreateProduct(ctx *gin.Context) {
 	routes.CreateProduct(ctx, svc.Client)
+}
+
+func (svc *ServiceClient) GetProduct(ctx *gin.Context) {
+	routes.GetProduct(ctx, svc.Client)
+}
+
+func (svc *ServiceClient) ListProduct(ctx *gin.Context) {
+	routes.ListProduct(ctx, svc.Client)
+}
+
+func (svc *ServiceClient) UpdateProduct(ctx *gin.Context) {
+	routes.UpdateProduct(ctx, svc.Client)
+}
+func (svc *ServiceClient) DeleteProduct(ctx *gin.Context) {
+	routes.DeleteProduct(ctx, svc.Client)
 }
